kubernetes/back/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtraining-back
  labels:
    app: speedtraining-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: speedtraining-back
  template:
    metadata:
      name: speedtraining-back
      labels:
        app: speedtraining-back
    spec:
      volumes:
        - name: speedtraining-shared
          emptyDir: {}

      imagePullSecrets:
        - name: pcavezzan.azurecr.io
      containers:
        - image: pcavezzan.azurecr.io/speedtraining/back:v3
          name: main
          volumeMounts:
            - mountPath: /app/.env
              name: speedtraining-shared
              subPath: .env
          ports:
          - containerPort: 8000
          resources:
            limits:
              cpu: 200m
              memory: 64Mi
            requests:
              cpu: 100m
              memory: 32Mi
          livenessProbe:
            httpGet:
              port: 8000
              path: /health/liveness
          readinessProbe:
            httpGet:
              port: 8000
              path: /health/readiness
          startupProbe:
            httpGet:
              port: 8000
              path: /health/liveness
            failureThreshold: 20
