kubernetes/back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtraining-back
  labels:
    app: speedtraining-back
spec:
  selector:
    app: speedtraining-back
  ports:
    - port: 80
      targetPort: 8000
