kubernetes/back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtraining-back
  labels:
    app: speedtraining-back
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: speedtraining-front-tmodeste.apps.codeinlove.fr
      http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: speedtraining-back
                port:
                  number: 80
